First models created, description for SendMessage method added to User model

--- a/HermesChat_TeamA.csproj
+++ b/HermesChat_TeamA.csproj
@@ -23,7 +23,7 @@
     <None Include="Areas\Identity\Pages\Account\RegisterConfirmation.cshtml" />
     <None Include="Areas\Identity\Pages\Account\ResetPassword.cshtml" />
     <None Include="Areas\Identity\Pages\Account\_ViewImports.cshtml" />
-    <None Include="Areas\Identity\Pages\_ChattyLayout.cshtml" />
+    <None Include="Areas\Identity\Pages\_HermesChatLayout.cshtml" />
     <None Include="Areas\Identity\Pages\_ValidationScriptsPartial.cshtml" />
     <None Include="Areas\Identity\Pages\_ViewImports.cshtml" />
     <None Include="Areas\Identity\Pages\_ViewStart.cshtml" />
