conneced users' ids in a proper place real time updating when smbd connects/disconnects

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,6 +8,14 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DOMAS-LAPTOP\\SQLEXPRESS;Initial Catalog=HermesChatDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+
+  "EmailConfiguration": {
+    "From": "testastestauskas43@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587,
+    "UserName": "Hermis Chat",
+    "Password": "vkdpimzmrkqphlaq"
   }
 }
 
