In the database stored profile pictures are retrieved properly to the frontend side

--- a/HermesChat_TeamA.csproj
+++ b/HermesChat_TeamA.csproj
@@ -43,6 +43,7 @@
     <None Include="Views\Shared\_ValidationScriptsPartial.cshtml" />
     <None Include="Views\_ViewImports.cshtml" />
     <None Include="Views\_ViewStart.cshtml" />
+    <None Include="wwwroot\Images\no-profile-picture.png" />
   </ItemGroup>
 
   <ItemGroup>
